--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "font-awesome": "^4.7.0",
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
